--- a/public/styles.css
+++ b/public/styles.css
@@ -4,7 +4,7 @@ h1 {
 
 li {
     list-style: none;
-    width: 30%;
+    width: 60%;
     padding: 6px;
     border-bottom: 1px solid #ddd;
     background-color: white;
@@ -21,6 +21,11 @@ li:hover {
     justify-content: space-evenly;
 }
 
+.column {
+    margin: 10px;
+    width: 100%;
+}
+
 .locate {
     margin-left: 5px;
 }
@@ -28,8 +33,8 @@ li:hover {
 
 #location-display {
     border: 1px groove grey;
-    width: 40%;
-    height: 120px;
+    width: 80%;
+    height: auto;
     padding: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
