--- a/public/styles.css
+++ b/public/styles.css
@@ -90,11 +90,15 @@ animation-duration: 1s
 }
 
 
-#map-frame {
+#mapbox {
     border: 1px solid grey;
     border-radius: 3px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    width: 100%;
+    height: 30rem;
 }
+
+
 
 
 #loader {
@@ -121,11 +125,5 @@ animation-duration: 1s
     }
 }
 
-.animate-load {
-    position: relative;
-    -webkit-animation-name: animate-load;
-    -webkit-animation-duration: 1s;
-    animation-name: animate-load;
-    animation-duration: 1s
-}
+
 
