--- a/public/styles.css
+++ b/public/styles.css
@@ -33,19 +33,37 @@ li:hover {
 }
 
 .row {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+   display: flex;
+   flex-direction: row;
 }
 
 .column {
-    margin: 10px;
-    width: 100%;
+    flex: 1;
 }
+
+
+@media screen and (max-width: 600px) {
+    .row {
+        display: block;
+    }
+}
+
 
 .locate {
     margin-left: 5px;
+    background-color:#3498db;
+    border-color: #3498db;
+    border-radius: 2px;
+    padding: 5px;
+    color: white;
 }
+
+.locate:hover {
+    background-color: #AAABBB;
+    border-color: #AAABBB;
+}
+
+
 
 .animate-load {
 position: relative;
@@ -91,14 +109,12 @@ animation-duration: 1s
 
 
 #mapbox {
-    border: 1px solid grey;
+    /* border: 1px solid grey;
     border-radius: 3px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    width: 100%;
+    width: 100%; */
     height: 30rem;
 }
-
-
 
 
 #loader {
@@ -124,6 +140,7 @@ animation-duration: 1s
         transform: rotate(360deg);
     }
 }
+
 
 
 
