--- a/public/styles.css
+++ b/public/styles.css
@@ -22,7 +22,7 @@ h2 {
 
 li {
     list-style: none;
-    padding: 10px;
+    padding: 6px;
     border-bottom: 1px solid #ddd;
     background-color: white;
 }
@@ -39,6 +39,7 @@ li:hover {
 
 .column {
     flex: 1;
+    margin-left: 3rem;
 }
 
 
@@ -46,11 +47,16 @@ li:hover {
     .row {
         display: block;
     }
+     .locate {
+        display: block;
+     }
 }
+
 
 
 .locate {
     margin-left: 5px;
+    margin-top: 0.15rem;
     background-color:#3498db;
     border-color: #3498db;
     border-radius: 2px;
@@ -94,12 +100,11 @@ animation-duration: 1s
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
+
 #other-stations {
-    margin-top: 3rem;
+    margin-top: 2rem;
     
 }
-
-
 
 #station-list  {
     width: 84%;
@@ -107,12 +112,16 @@ animation-duration: 1s
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
+#map-container {
+    margin-right: 3rem;
+}
 
 #mapbox {
-    /* border: 1px solid grey;
+    margin-right: 2rem;
+    border: 1px solid grey;
     border-radius: 3px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    width: 100%; */
+    width: 100%;
     height: 30rem;
 }
 
