--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,6 @@
 body {
     background-color:#464866;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
      
 }
 
@@ -14,15 +14,16 @@ h1 {
 h2 {
     background-color: #2E9CCA;
     color: white;
-    width: 81%;
+    width: 100%;
     padding: 8px;
     border: 1px solid #2E9CCA;
     border-radius: 2px;
+    margin-top: 0;
 }
 
 li {
     list-style: none;
-    padding: 6px;
+    padding: 6px 6px 6px 8px;
     border-bottom: 1px solid #ddd;
     background-color: white;
 }
@@ -32,26 +33,29 @@ li:hover {
     transition: 0.3s
 }
 
+i {
+    margin-right: 2px;
+}
+
+.container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    clear: both;
+    margin-bottom: 1rem;
+}
+
 .row {
    display: flex;
    flex-direction: row;
 }
 
 .column {
+    display: flex;
     flex: 1;
     margin-left: 3rem;
 }
-
-
-@media screen and (max-width: 600px) {
-    .row {
-        display: block;
-    }
-     .locate {
-        display: block;
-     }
-}
-
 
 
 .locate {
@@ -64,6 +68,48 @@ li:hover {
     color: white;
 }
 
+.hide {
+    display: none;
+}
+
+.mapboxgl-canvas {
+
+    width: 100%;
+
+}
+
+.icon {
+    margin-right: 5px;
+}
+
+#main {
+    margin-top: 1rem;
+}
+
+#location-display {
+    margin: auto;
+    background-color: white;
+    border: 1px groove grey;
+    border-radius: 3px;
+    width: 83%;
+    height: auto;
+    padding: 12px 12px 12px 15px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+
+#message {
+    width: 100%;
+    margin-right: 1rem;
+    justify-content: center;
+}
+
+#locate-me {
+    padding: 10px;
+    color: white;
+}
+
+
 .locate:hover {
     background-color: #AAABBB;
     border-color: #AAABBB;
@@ -71,13 +117,15 @@ li:hover {
 
 
 
-.animate-load {
+ .animate-load {
 position: relative;
 -webkit-animation-name: animate-load;
 -webkit-animation-duration: 1s;
 animation-name: animate-load;
 animation-duration: 1s
 }
+
+
 
 @-webkit-keyframes animate-load {
   from { opacity:0 } 
@@ -87,33 +135,21 @@ animation-duration: 1s
 @keyframes animate-load { 
   from{ opacity:0 } 
   to{ opacity:1 }
-}
-
-
-#location-display {
-    background-color: white;
-    border: 1px groove grey;
-    border-radius: 3px;
-    width: 80%;
-    height: auto;
-    padding: 12px 12px 12px 15px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-}
-
+} 
 
 #other-stations {
-    margin-top: 2rem;
-    
+    margin-left: 2.5rem;
 }
 
 #station-list  {
-    width: 84%;
+    width: 100%;
     padding-left: 0px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 #map-container {
-    margin-right: 3rem;
+    margin-left: 4.1rem;
+    margin-right: 4.3rem;
 }
 
 #mapbox {
@@ -123,7 +159,7 @@ animation-duration: 1s
     width: 100%;
     height: 30rem;
 }
-
+/* 
 
 #loader {
     position: absolute;
@@ -137,8 +173,8 @@ animation-duration: 1s
     border-top: 8px solid #3498db;
     -webkit-animation: spin 1s linear infinite;
     animation: spin 1s linear infinite;
-}
-
+} */
+/*
 @keyframes spin {
     0% {
         transform: rotate(0deg);
@@ -147,7 +183,30 @@ animation-duration: 1s
     100% {
         transform: rotate(360deg);
     }
+} */
+
+@media screen and (max-width: 600px) {
+
+    h2 {
+        width: 88%;
+    }
+    .row {
+        display: block;
+    }
+
+    .locate {
+        display: block;
+    }
+
+    #other-stations {
+        margin-left: 0;
+    }
+
+     #station-list {
+         width: 88%;
+     }
 }
+
 
 
 
