--- a/public/styles.css
+++ b/public/styles.css
@@ -210,6 +210,7 @@ animation-duration: 1s
 @media screen and (max-width: 950px) {
    
     #other-stations {
+        margin-top: 1rem;
         margin-left: 1rem;
     }
 
