--- a/public/styles.css
+++ b/public/styles.css
@@ -58,6 +58,29 @@ i {
 }
 
 
+.isLoading {
+    margin: auto;
+    clear: both;
+    z-index: 1;
+    width: 50px;
+    height: 50px;
+    border: 8px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 8px solid #3498db;
+    -webkit-animation: spin 1s linear infinite;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 .locate {
     margin-left: 5px;
     margin-top: 0.15rem;
@@ -73,7 +96,6 @@ i {
 }
 
 .mapboxgl-canvas {
-
     width: 100%;
 
 }
@@ -156,6 +178,7 @@ animation-duration: 1s
 #map-container {
     margin-left: 6rem;
     margin-right: 6rem;
+    min-height: 300px;
 }
 
 #mapbox {
@@ -163,7 +186,7 @@ animation-duration: 1s
     border-radius: 3px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     width: 100%;
-    height: 30rem;
+    height: auto;
 }
 
 
